# giveip

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  SECURITY.md  app.py  compose.yml  fly.toml  package.json  start.sh  terms.md  update.sh
.github/workflows/: build.yml  check.yml
assets/: main.js
src/: 404.html  humans.txt  index.hbs  index.html  main.css  main.js  main.rs  pages.rs
src/pages/: index.rs  load_ip.js  not_found.rs
templates/: 404.hbs  index.hbs  style.hbs
