[package]
name = "giveip"
authors = ["0/0 <zero@imaskeleton.me>", "valkyrie_pilot <valk@randomairborne.dev>"]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/giveip"
keywords = ["ip-address", "webserver", "docker"]
categories = ["web-programming::http-server"]
description = "A simple hyper http server to echo back IP addresses"

[dependencies]
axum = { version = "0.6", features = ["tokio", "http1", "http2"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net"] }
tokio-shutdown = { version = "0.1", default-features = false }
prometheus = { version = "0.13", default-features = false }
prometheus-static-metric = "0.5"
thiserror = "1"

[profile.release]
lto = "fat"
