[package]
name = "giveip"
authors = ["0/0 <zero@imaskeleton.me>", "valkyrie_pilot <valk@randomairborne.dev>"]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/giveip"
keywords = ["ip-address", "webserver", "docker"]
categories = ["web-programming::http-server"]
description = "A simple hyper http server to echo back IP addresses"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1", "http2"], default-features = false }
askama = { version = "0.12", features = ["with-axum"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["set-header"] }
askama_axum = { version = "0.4", default-features = false }
thiserror = "1"
tower = "0.4"
rand = "0.8"
vss = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.cargo-machete]
ignored = ["askama_axum"]