[package]
name = "giveip"
authors = ["0/0 <zero@imaskeleton.me>", "valkyrie_pilot <valk@randomairborne.dev>"]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/giveip"
keywords = ["ip-address", "webserver", "docker"]
categories = ["web-programming::http-server"]
description = "A simple http server to echo back IP addresses"

[dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "http2", "macros", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["set-header"] }
tower-sombrero = { version = "0.1", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
maud = { version = "0.26", features = ["axum"] }
thiserror = "2"
tower = "0.5"
vss = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.cargo-machete]
ignored = ["askama_axum"]
